# anumate

./: .env.example  .env.infrastructure.example  .gitattributes  .gitignore  A26_IMPLEMENTATION_REPORT.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE.md  Makefile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  repomix.config.json  requirements.txt
.gemini/: README.md
schemas/: README.md  pyproject.toml
services/approvals/: .gitignore  A20_IMPLEMENTATION_SUMMARY.md  A21_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  config.py  demo.py  dependencies.py  dependencies_fixed.py  dependencies_old.py  main.py  pyproject.toml
services/approvals/api/: __init__.py  main.py  routes.py  routes_complex.py  workflow_routes_broken.py  workflow_routes_clean.py
services/approvals/config/: __init__.py  database.py  settings.py
services/approvals/scripts/: run_demo.py  start.sh
services/approvals/src/: __init__.py  enhanced_service.py  models.py  notifications.py  repository.py  service.py  workflow_engine.py  workflow_manager.py
services/approvals/tests/: __init__.py
services/capsule-registry/: README.md  api.yaml  events.py  main.py  models.py  pyproject.toml  repo.py  security.py  service.py  settings.py  signing.py  validation.py  worm_store.py
services/capsule-registry/db/: alembic.ini
services/capsule-registry/db/alembic/: env.py
services/capsule-registry/db/postgres/: init.sql
services/capsule-registry/tests/: conftest.py
services/captokens/: .env.example  README.md  hackathon_mvp_service.py  pyproject.toml  requirements.txt  run_production.py  setup_database.py  setup_database_sync.py
services/captokens/src/: app.py  token_service.py
services/captokens/src/anumate_captokens_service/: __init__.py  app_production.py  capability_checker.py  capability_middleware.py  cli.py  database.py  database_services.py  migrate.py  models.py  services.py  usage_tracker.py  violation_logger.py
services/eventbus/: Dockerfile  README.md  a28_validation_results.json  docker-compose.yml  pyproject.toml  validate_a28.py
services/eventbus/deployment/kubernetes/: eventbus-deployment.yaml
services/eventbus/monitoring/: prometheus.yml
services/eventbus/src/anumate_eventbus_service/: __init__.py  app.py  eventbus_core.py  publishers.py  subscribers.py
services/ghostrun/: API_ENDPOINTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  demo.py  demo_api_endpoints.py  demo_preflight_reports.py  pyproject.toml
services/ghostrun/api/: __init__.py  dependencies.py  main.py
services/ghostrun/api/routes/: simulation.py
services/ghostrun/src/: __init__.py  event_publisher.py  mock_connectors.py  models.py  report_storage.py  risk_analyzer.py  service.py  simulation_engine.py  validation_engine.py
services/ghostrun/tests/: __init__.py
services/integration/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/integration/deployment/kubernetes/: integration-service.yaml
services/integration/src/anumate_integration_service/: __init__.py  api_gateway.py  app.py  circuit_breaker.py  cli.py  discovery_client.py  health_manager.py  load_balancer.py  service_registry.py
services/orchestrator/: .env.example  API_ENDPOINTS_SUMMARY.md  DEPENDENCY_FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  JUDGE_MODE.md  PORTIA_CONFIG.md  PRODUCTION_READY.md  RAZORPAY_MCP_SUCCESS_REPORT.md  README.md  demo.py  demo.sh  demo_api_endpoints.py  demo_mcp.py  pyproject.toml  run_service.py  run_tests.py  setup_production_env.sh  simple_demo.py  start_production.py
services/orchestrator/api/: __init__.py  dependencies.py  main.py  models.py
services/orchestrator/api/routes/: execution.py  razorpay_webhook.py
services/orchestrator/src/: __init__.py  capability_validator.py  captokens_client.py  clarifications_bridge.py  execute_via_portia.py  execution_monitor.py  execution_monitor_standalone.py  mcp_execution.py  models.py  plan_transformer.py  plan_transformer_new.py  portia_client.py  portia_client_compat.py  portia_mcp.py  portia_sdk_client.py  razorpay_poll.py  receipts_client.py  retry_handler.py  service.py  service_mcp.py  settings.py
services/orchestrator/tests/: __init__.py
services/plan-compiler/: README.md  demo.py  demo_api_endpoints.py  demo_optimization_and_caching.py  pyproject.toml
services/plan-compiler/api/: __init__.py  dependencies.py  main.py
services/plan-compiler/api/routes/: compilation.py  health.py  plans.py
services/plan-compiler/src/: __init__.py  cache_service.py  compiler.py  dependency_analyzer.py  dependency_resolver.py  models.py  optimizer.py  validator.py
services/plan-compiler/tests/: __init__.py
services/policy/: ENFORCEMENT_IMPLEMENTATION.md  README.md  debug_test.py  demo_api.py  pyproject.toml
services/policy/api/: __init__.py  dependencies.py  main.py  models.py  server.py
services/policy/api/routes/: __init__.py  policies.py
services/policy/examples/: enforcement_demo.py  pii_protection_policy.py
services/policy/src/: __init__.py  ast_nodes.py  drift_detector.py  enforcement.py  engine.py  evaluator.py  lexer.py  middleware.py  parser.py  policy_service.py  validator.py  violation_reporter.py
services/policy/tests/: __init__.py
services/registry/: Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SLO.md  alembic.ini  api.yaml  app_mvp.py  demo_api.py  demo_business_logic.py  deps.txt  events.py  main.py  main_production_mvp.py  models.py  pyproject.toml  pytest.ini  repo.py  security.py  service.py  settings.py  signing.py  simple_demo.py  validate_service.py  validation.py  worm_store.py
services/registry/alembic/: alembic.ini  env.py
services/registry/api/: __init__.py  dependencies.py  main.py  server.py
services/registry/examples/: capsule_example.py
services/registry/sql/: rls_policies.sql
services/registry/src/: __init__.py  approval_workflow.py  composition.py  dependency_resolver.py  diff_tracker.py  models.py  repository.py  service.py  validation.py
services/registry/tests/: __init__.py  conftest.py  conftest_isolated.py  conftest_old.py
(+121 files in other folders)
