[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anumate-schemas"
version = "0.1.0"
description = "Shared schemas and contracts for Anumate services"
authors = [{name = "Anumate Team"}]
dependencies = [
    "pydantic>=2.5.0",
    "jsonschema>=4.20.0",
    "pyyaml>=6.0.1",
    "cloudevents>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["schemas"]