[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anumate-registry"
version = "0.1.0"
description = "Anumate Capsule Registry Service - A.4–A.6 Implementation"
authors = [{name = "Anumate Team"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.20.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    # Shared Anumate libraries
    "anumate-core-config",
    "anumate-errors", 
    "anumate-logging",
    "anumate-tracing",
    "anumate-tenancy",
    "anumate-oidc",
    "anumate-events",
    "anumate-crypto",
    "anumate-planhash",
    "anumate-redaction",
    "anumate-idempotency",
    "anumate-receipt",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
registry-server = "services.registry.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
    "schemathesis>=3.19.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]